# from_zero_to_hero

./: .env.example  .gitignore  1_load_data.ipynb  README.md  example.env  load_data.py  neo4j_indexes.json  neo4j_model.json  prerequisites.md  pyproject.toml  requirements.txt  seed.cypher
.devcontainer/: devcontainer.json
.github/prompts/: plan-fromZeroToHero.prompt.md
docs/: cypher-exercises.md  schema.md  semantic-retrieval.md
modules/: 1.load_data.ipynb  2.query_graph.cypher  3.vector_index_search.ipynb  4.mcp.ipynb  4.neo4j_mcp.ipynb  5.build_your_own_mcp_server.ipynb
src/workshop/: __init__.py  db.py  mcp_server.py  queries.py
